change useSky to OceanSky and fix padding on mobile in some cases

--- a/frontend/sass/pages/_csharp.scss
+++ b/frontend/sass/pages/_csharp.scss
@@ -49,7 +49,7 @@
 			padding: 0 $default-font-size * 2 0 $default-font-size * 2;
 
 			@include respond(phone) {
-				padding: $default-font-size * 0.5;
+				padding: $default-font-size * 0.5 $default-font-size * 1;
 			}
 		}
 
